#overlay over specfic pane of "sql query" and "schema" tab #scrollbar problem under "table,views,procedures" tab section of "sql query" tab fixed #browser scrollbar made fixed during refresh action in "schema" tab

--- a/src/frontend/org/voltdb/dbmonitor/css/resources/layout.css
+++ b/src/frontend/org/voltdb/dbmonitor/css/resources/layout.css
@@ -671,11 +671,11 @@ ul.topRightList li a:hover { color: #222222 !important;text-decoration: none !im
 .contentQuery {background:#CCCCCC; padding:20px;}
 .queryResult { background:#FFFFFF; padding:15px;}
 
-.blockWrapper{background:; margin-bottom:20px;}
-.objectExplorer{float:left; width:28%; padding:15px 1%; background:#fff;}
+.blockWrapper{margin-bottom:20px;}
+.objectExplorer{float:left; width:28%; padding:15px 1%; background:#fff;position: relative;}
 .queryInput{float:right; width:68%;}
 #queryForm{ background:#FFFFFF;}
-.queryInput .query textarea{width:98%; padding:1%; resize:none!important; height:186px;border: 1px solid #CCCCCC;line-height:25px; font-size:18px;}
+.queryInput .query textarea{width:98%; padding:1%; resize:none!important; height:215px;border: 1px solid #CCCCCC;line-height:25px; font-size:18px;}
 .queryInput .query textarea:focus{outline:none;}
 .textWritingArea { padding:13px;}
 .btnList { margin:10px 0 0 0; padding:0; float:right;}
@@ -710,8 +710,10 @@ h1.icon-queryResult{background-position:15px -1039px;}
 .resultHtml, .resultCsv, .resultMonospace{width:100%; overflow:auto;height:400px;}
 .queryResult pre{line-height:20px;}
 #overlay, #adminActionOverlay{ position: fixed;height: 100%;width: 100%;bottom: 0;background: rgba(0, 0, 0, 0.3);z-index: 9999;}
-.loading{ background: #fff url(images/loader.GIF) no-repeat center center;height: 75px;width: 75px;margin: 20% auto;}
-.loading-medium{ background: #fff url(images/loader-medium.GIF) no-repeat center center;height: 30px;width: 30px;margin: 25% auto;}
+#schemaOverlay{ position: fixed;height:100%;width: 100%;bottom: 0;background: rgba(0, 0, 0, 0.3);z-index: 999; top:10.5%;}
+#sqlQueryOverlay {position: absolute;height:100%;width: 100%;bottom: 0;background: rgba(0, 0, 0, 0.3);z-index: 999;left: 0px;}
+.loading{ background: #fff url(images/loader.GIF) no-repeat center center;height: 75px;width: 75px;margin: 20% auto; z-index: 99999;}
+.loading-medium{ background: #fff url(images/loader-medium.GIF) no-repeat center center;height: 30px;width: 30px;margin: 38% auto;}
 .loading-small{ background: #fff url(images/loader-small.GIF) no-repeat center center;height: 20px;width: 20px;
                 position: absolute;top: 11px;left: 102px;}
 
@@ -970,8 +972,8 @@ text-align: center;
 color: #fff;
 font: 14px Arial, Helvetica, sans-serif;
 }
-.refreshBtn { float:right; background:#AA1F2F; padding:5px 10px; border:1px solid #AA1F2F; color:#FFFFFF; cursor:pointer;display: none;}
-.schm { margin:9px}
+.refreshBtn { float:right; background:#AA1F2F; padding:5px 10px; border:1px solid #AA1F2F; color:#FFFFFF; cursor:pointer;}
+.schm { margin: 9px;display: none;}
 .securWrapper { /*margin:10px 40px;*/ margin:0 0 -3px 0;}
 .secTbl {/* border:1px solid #CCCCCC;*/ }
 .secTbl tr th,.secTbl tr td { border-bottom:1px solid #CCCCCC; text-align:left; /*padding:5px 0 10px 10px;*/ padding:5px 0 0 40px;}
